--- a/corgi/seller/templates/Sbase.html
+++ b/corgi/seller/templates/Sbase.html
@@ -32,7 +32,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/seller/edit-profile">My Store</a>
+                  <a class="nav-link active" aria-current="page" href="/seller/store-profile">My Store</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/seller/products">Manage My Store</a>
