--- a/corgi/seller/templates/edit_product.html
+++ b/corgi/seller/templates/edit_product.html
@@ -5,30 +5,24 @@
 {% endblock %}
 
 {% block content %}
-<style>
-    body {
-    position: absolute;
-    top: 18%;
-    width: 30%;
-    height: 20%;
-    left: 5%;
-  }
-  .container .card {
-    border: 1px solid #ccc;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    max-width: 300px;
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  </style>
-    <div class="container card">
+</br>
+</br>
+</br>
+</br>
+</br>
+  <section class="pt-5 pb-5">
+    <div class="card text-center" style="">
+      <div class="card-header">
+        <h1 class=''>Edit Product</h1>
+      </div>
+      <div class"card-boy">
             <form method="POST" enctype="multipart/form-data">
-                <h1 class='box'>Edit Product</h1>
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit">Register</button>
+                <button type="submit" class="btn btn-primary">Register</button>
             </form>
+          </br>
+      </div>
     </div>
+  </section>
 {% endblock %}
