edit shopping cart interface

--- a/corgi/buyer/templates/cart.html
+++ b/corgi/buyer/templates/cart.html
@@ -1,62 +1,56 @@
 {% load static %}
 
-<!DOCTYPE html>
-<html>
+<head>
+    <title>Corgi Store | Cutest Store</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<head>
-    <title>Seller Site</title>
-    <nav class="navbar bg-body-tertiary fixed-top">
+    <link rel="icon" type="image/x-icon" href="{% static 'media/logo.jpg'%}" />
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="/" style="font-weight:bold; color: #ec9410;">
-            Corgi Store
-            <img class="navbar-brand" src="{% static 'media/logo.jpg'%}" alt="" width="100" height="100">
-          </a>
-          <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-              <h3 class="offcanvas-title" id="offcanvasNavbarLabel">Seller Menu</h3>
-              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-          
-            <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">My Profile Setting</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Manage My Store</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Inbox</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Order Status</a>
-                </li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </nav>
-</head>
+            <a class="navbar-brand" href="/" style="font-weight:bold; color: #ec9410;">
+                <img class="navbar-brand" src="{% static 'media/logo.jpg'%}" alt="" width="100" height="100">
+                Corgi Store
+            </a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    {% block nav %}
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/" style="color: #595959;">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/store/categories" style="color: #595959;">Categories</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/store/cart/checkout/payment-status/" style="color: #595959;">Order Status</a>
+                        </li>
+                    {% endblock %}
+                </ul>
+                {% block right-nav %}
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <form class="d-flex" role="search" action="{% url 'search' %}">
+                            <input class="form-control me-2" type="search" name="q" placeholder="All Product Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit" style="color: #f8bc63; border-color: #f8bc63;">Search</button>
+                        </form>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/store/cart" style="color: #595959;">Cart</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/store/edit_profile/" style="color: #595959;">My Profile</a>
+                        </li>
+                    </ul>
+                {% endblock %}
 
-<!DOCTYPE html>
-<html>
-  <head>
+            </div>
+        </div>
+    </nav>
+
+  </head>
+
+
+
     <style>
-    body {
-    position: absolute;
-    top: 18%;
-    width: 30%;
-    height: 20%;
-    left: 5%;
-  }
     .container {
         display: flex;
         justify-content: space-between;
@@ -101,14 +95,12 @@
 
 
       </style>
-      
-  </head>
-  <body>
+  <body><ul>
   <h1>Shopping Cart</h1>
   <div class="col-md-10">
     <form method="POST">
         {% csrf_token %}
-        <table class="table table-striped" style="width: 350%;">
+        <table class="table table-striped" style="width: 120%;">
           <thead class="text-center">
             <br>
                 <tr>
@@ -151,8 +143,3 @@
   
   </body>
 </html>
-
-
-
-    
-
