--- a/corgi/homepage/templates/homepage.html
+++ b/corgi/homepage/templates/homepage.html
@@ -30,17 +30,6 @@
 </head>
 <body>
     {% block content %}
-    <!-- <img src="{% static 'media/corgi_main.jpg'%}" class='img-fluid' alt="" style='width: 100%;height: 1000px;'>
-    <div class="d-grid gap-2 col-6 mx-auto">
-        <button onclick="location.href='/store'"
-        style="position: absolute;top: 60%;left: 25%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;" type="button">
-            Store</button>
-        <button onclick="location.href='/seller/login'"
-        style='position: absolute;top: 60%;left: 75%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;' type="button">
-            Seller</button>
-    </div> -->
-
-
     <h1 style="position: absolute;top: 30%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 50px">Welcome to</h1>
     <h1 style="position: absolute;top: 38%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 50px">Corgi Store</h1>
     <p style="position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 30px">You are...</p>
@@ -56,3 +45,127 @@
     </div>
     {% endblock %}
 </body>
+
+
+
+
+---------------------------
+
+{% load static %}
+
+<!DOCTYPE html>
+<html>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <head>
+    <style>
+    body {
+    position: absolute;
+    top: 18%;
+    width: 30%;
+    height: 20%;
+    left: 5%;
+  }
+    .container {
+        display: flex;
+        justify-content: space-between;
+        }
+
+    .quantity {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        }
+    .quantity p {
+          margin: 5px;
+        }
+
+    .remove {
+          background-color: #f44336;
+          color: white;
+          border: none;
+          padding: 10px;
+          border-radius: 5px;
+          cursor: pointer;
+          margin-top: 20px;
+        }
+        .checkout {
+          background-color: #f8bc63;
+          color: white;
+          border: none;
+          padding: 10px;
+          border-radius: 5px;
+          cursor: pointer;
+          margin-top: 20px;
+        }
+
+.summary {
+    position: absolute;
+    top: 100;
+    right: 20;
+    }
+    td {
+  text-align: center;
+}
+
+
+      </style>
+      
+  </head>
+  <body>
+  <h1>Shopping Cart</h1>
+  <div class="col-md-10">
+    <form method="POST">
+        {% csrf_token %}
+        <table class="table table-striped" style="width: 350%;">
+          <thead class="text-center">
+            <br>
+                <tr>
+                    <th scope="col">Image</th>
+                    <th scope="col">Product</th>
+                    <th scope="col">Price/Unit</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Total Price</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for cart in carts %}
+                    <tr>
+                        <td><img src="{{ cart.product.image.url }}" alt="" width=100 height=auto></td>
+                        <td>{{ cart.product }}</td>
+                        <td>฿ {{ cart.product.price }}</td>
+                        <td>
+                            <div class="quantity">
+                                <button class="decrease">-</button>
+                                <p>{{ cart.amount }}</p>
+                                <button class="increase">+</button>
+                            </div>
+                        </td>
+                        <td>฿ {{ cart.price }}</td>
+                        <td><button class="remove">Remove</button></td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </form>
+</div>
+    <h3>Total (tax included)</h3> 
+    <h5>฿ {{ total }}</h5>
+    <br>
+      <a class="checkout" aria-current="page" href="checkout/" style="line-height: 1.5;">Go to Checkout</a>
+    <br>
+    </div>
+  </div>
+  
+  </body>
+</html>
+
+
+
+    
+
+
