--- a/corgi/buyer/templates/chat.html
+++ b/corgi/buyer/templates/chat.html
@@ -21,8 +21,8 @@
   <a class="nav-link active" aria-current="page" href="/store/cart" style="color: #595959";>Cart</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/store/edit_profile/" style="color: #595959";>My Profile</a>
-</li>
+    <a class="nav-link active" aria-current="page" href="/user/edit_profile/" style="color: #595959";>My Profile</a>
+  </li>
 {% endblock %}
 
 {% block content %}
