--- a/corgi/buyer/templates/store_detail.html
+++ b/corgi/buyer/templates/store_detail.html
@@ -46,7 +46,7 @@
   </li>
   
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="/store/edit_profile/" style="color: #595959";>My Profile</a>
+    <a class="nav-link active" aria-current="page" href="/user/edit_profile/" style="color: #595959";>My Profile</a>
   </li>
 {% endblock %}
     </ul>
