--- a/corgi/core/templates/edituserprofile.html
+++ b/corgi/core/templates/edituserprofile.html
@@ -1,3 +1,4 @@
+{% extends "homepage.html" %}
 
 {% block content %}
 
@@ -9,24 +10,29 @@
           <h1 class="card-title text-center mb-4">Edit Profile</h1>
           <form method="POST" action="">
             {% csrf_token %}
-            <div class="form-group">
+            <div class="form-group mb-3">
               {{ cust.first_name.label_tag }}
               {{ cust.first_name }}
             </div>
-            <div class="form-group">
+            <div class="form-body mb-3">
               {{ cust.last_name.label_tag }}
               {{ cust.last_name }}
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
               {{ cust.email.label_tag }}
               {{ cust.email }}
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
               {{ cust.phone.label_tag }}
               {{ cust.phone }}
-            </div>
+            </div> 
+            <div class="form-group mb-3">
+              {{ cust.address.label_tag }}
+              {{ cust.address }}
+            </div> 
             <div class="d-flex justify-content-center">
-              <button type="submit" class="btn btn-primary">llll</button>
+              <button type="submit" class="btn btn-primary">Make Change</button>
+              <input type="hidden" name="previous_url" value="{{ request.META.HTTP_REFERER }}">
             </div>
           </form>
         </div>
