--- a/corgi/core/templates/edituserprofile.html
+++ b/corgi/core/templates/edituserprofile.html
@@ -1,7 +1,12 @@
-{% extends "homepage.html" %}
+{% extends "profile.html" %}
 
 {% block content %}
-
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-6 offset-md-3">
