--- a/corgi/buyer/templates/chat.html
+++ b/corgi/buyer/templates/chat.html
@@ -21,7 +21,7 @@
   <a class="nav-link active" aria-current="page" href="/store/cart" style="color: #595959";>Cart</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="/user/edit_profile/" style="color: #595959";>My Profile</a>
+    <a class="nav-link active" aria-current="page" href="/user" style="color: #595959";>My Profile</a>
   </li>
 {% endblock %}
 
