--- a/corgi/buyer/templates/edit_profile.html
+++ b/corgi/buyer/templates/edit_profile.html
@@ -21,7 +21,7 @@
   <a class="nav-link active" aria-current="page" href="/store/cart" style="color: #595959";>Cart</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/store/edit_profile/" style="color: #595959";>My Profile</a>
+  <a class="nav-link active" aria-current="page" href="/user/profile/" style="color: #595959";>My Profile</a>
 </li>
 {% endblock %}
 
