--- a/corgi/buyer/templates/store base.html
+++ b/corgi/buyer/templates/store base.html
@@ -21,7 +21,6 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             
-            {% block nav %}
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/" style="color: #595959";>Home</a>
             </li>
@@ -31,11 +30,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/store/cart/checkout/payment-status/" style="color: #595959";>Order Status</a>
             </li>
-            {% endblock %}
         </ul>
     </div>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-{% block right-nav %}
 <form class="d-flex" role="search" action="{% url 'search' %}">
     <input class="form-control me-2" type="search" name="q" placeholder="All Product Search" aria-label="Search" >
     <button class="btn btn-outline-warning" type="submit" style="margin-left:7px;">Search</button>
@@ -46,9 +43,8 @@
   </li>
   
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="/user/edit_profile/" style="color: #595959";>My Profile</a>
+    <a class="nav-link active" aria-current="page" href="/user" style="color: #595959";>My Profile</a>
   </li>
-{% endblock %}
     </ul>
 </div>
 </nav>
