--- a/corgi/buyer/templates/checkout.html
+++ b/corgi/buyer/templates/checkout.html
@@ -40,9 +40,10 @@
     <div class="col-md-6">
       <h2>Customer Info:</h2>
       <br>
-      <p>Name: {{ buyer_name }}</p>
+      <p>First Name: {{ buyer_firstname }}</p>
+      <p>Last Name: {{ buyer_lastname }}</p>
       <p>Phone Number: {{ buyer_phone }}</p>
-    </div>
+    </div>    
   </div>
 
   <hr>
@@ -79,7 +80,7 @@
   <hr>
   <br>
   <h4>Please Scan QR Code for Payment </h4> <br>
-  <img src="{{ qrcode_image.url }}" alt="QR Code" width="200" height="200">
+  <img src="{{ qrcode_image.url }}" alt="QR Code" width="300" height="300">
 
   <hr>
   <h2>Upload Payment Receipt:</h2>
