--- a/corgi/buyer/templates/checkout.html
+++ b/corgi/buyer/templates/checkout.html
@@ -92,9 +92,10 @@
       <input type="file" name="receipt" class="form-control-file" id="receipt" onchange="previewImage(event)">
     </div>
     <div id="imagePreview"></div>
+    <button type="submit" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;  border-color:#f8bc63; padding:10px; width: 210px; position: relative; ">
+      Confirm Payment</button>
   </form>
 <br>
-  <a href="payment-status/" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;  border-color:#f8bc63; padding:10px; width: 210px; position: relative; ">Confirm Payment</a>
 </div>
 <script>
   function previewImage(event)
