--- a/corgi/core/templates/profile.html
+++ b/corgi/core/templates/profile.html
@@ -40,6 +40,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/user/order_status">Order Status</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/user/logout">Log out</a>
+                </li>
               </ul>
             </div>
           </div>
