--- a/corgi/buyer/templates/store_detail.html
+++ b/corgi/buyer/templates/store_detail.html
@@ -52,7 +52,7 @@
     </ul>
 </div>
 </nav>
-</head>>
+</head>
 
 {% block content %}
     <div class="container mt-5">
@@ -66,7 +66,7 @@
                     </div>
                     <div class="col-md-8">
                         <h5>Phone:</h5>
-                            <p>{{ store.phone }}</p>
+                            <p>{{ store.store_phone }}</p>
                             <hr>
                         <h5>Location:</h5>
                             <p>{{ store.store_address }}</p>
