--- a/corgi/seller/templates/Sbase.html
+++ b/corgi/seller/templates/Sbase.html
@@ -32,6 +32,12 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/store">Corgi Store</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/seller/store-profile">My Store</a>
                 </li>
                 <li class="nav-item">
@@ -43,6 +49,10 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">Order Status</a>
                 </li>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/user/logout">Log out</a>
+              </li>
                   </ul>
                 </li>
               </ul>
