--- a/corgi/core/templates/profile.html
+++ b/corgi/core/templates/profile.html
@@ -51,6 +51,8 @@
 </head>
 <body>
 {% block content %}
+<img src="{% static 'media/profile.jpg'%}" class='img-fluid' alt="" style='width: 100%;height: 1000px;'>
+<p style="position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 500%;text-align: center; ">User Menu</p>
 {% endblock %}
 <body>
 
