--- a/corgi/seller/templates/Sbase.html
+++ b/corgi/seller/templates/Sbase.html
@@ -47,7 +47,7 @@
                   <a class="nav-link" href="#">Inbox</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Order Status</a>
+                  <a class="nav-link" href="{% url 'order_status' %}">Order Status</a>
                 </li>
               </li>
               <li class="nav-item">
