--- a/corgi/seller/templates/edit_product.html
+++ b/corgi/seller/templates/edit_product.html
@@ -15,7 +15,7 @@
       <div class="card-header">
         <h1 class=''>Edit Product</h1>
       </div>
-      <div class"card-boy">
+      <div class"card-body">
             <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.as_p }}
