--- a/corgi/seller/templates/Sbase.html
+++ b/corgi/seller/templates/Sbase.html
@@ -26,7 +26,7 @@
             </div>
             <style>
               .navbar-nav li a {
-                font-size: 18px; /* adjust the font size as desired */
+                font-size: 18px;
               }
             </style>
             <div class="offcanvas-body">
