--- a/corgi/core/templates/profile.html
+++ b/corgi/core/templates/profile.html
@@ -32,13 +32,10 @@
                   <a class="nav-link" href="/store">Corgi Store</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/seller">Your Store</a>
-                </li>
-                <li class="nav-item">
                   <a class="nav-link" href="/user/profile">Your Profile</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/user/order_status">Order Status</a>
+                  <a class="nav-link" href="/store/cart/checkout/payment-status">Order Status</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/user/logout">Log out</a>
