--- a/corgi/buyer/templates/cart.html
+++ b/corgi/buyer/templates/cart.html
@@ -31,7 +31,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <form class="d-flex" role="search" action="{% url 'search' %}">
                             <input class="form-control me-2" type="search" name="q" placeholder="All Product Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit" style="color: #f8bc63; border-color: #f8bc63;">Search</button>
+                            <button class="btn btn-outline-warning" type="submit" >Search</button>
                         </form>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/store/cart" style="color: #595959;">Cart</a>
