--- a/corgi/buyer/templates/store_detail.html
+++ b/corgi/buyer/templates/store_detail.html
@@ -35,10 +35,10 @@
         </ul>
     </div>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-{% block right-nav %}
-<form class="d-flex" role="search" action="{% url 'search' %}">
-    <input class="form-control me-2" type="search" name="q" placeholder="All Product Search" aria-label="Search" >
-    <button class="btn btn-outline-warning" type="submit" style="margin-left:7px;">Search</button>
+  {% block right-nav %}
+  <form class="d-flex" role="search" action="{% url 'search' %}">
+    <input class="form-control me-2" type="search" name="q" placeholder="All Product Search" aria-label="Search">
+    <button class="btn btn-outline-warning" type="submit" >Search</button>
   </form>
   
   <li class="nav-item">
