--- a/corgi/core/templates/userprofile.html
+++ b/corgi/core/templates/userprofile.html
@@ -12,7 +12,7 @@
       <div class="col-md-6 offset-md-3">
         <div class="card">
           <div class="card-body">
-            <h1 class="card-title text-center mb-4">Your Profile</h1>
+            <h1 class="card-title text-center mb-4" style="color: #ec9410; ">Your Profile</h1>
             <h5>First Name</h5>        
             <p>{{user.first_name}}</p>
             <h5>Last Name</h5>        
@@ -24,7 +24,7 @@
             <h5>Address</h5>        
             <p>{{user.address}}</p>
               <div class="d-flex justify-content-center">
-                <a href="/user/edit-profile" class="btn btn-primary">edit profile</a>
+                <a href="/user/edit-profile" class="btn btn-primary" style="background-color:  #f8bc63; border:  #f8bc63;">edit profile</a>
               </div>
             </form>
           </div>
