--- a/corgi/seller/templates/order_status.html
+++ b/corgi/seller/templates/order_status.html
@@ -1,7 +1,7 @@
 {% extends "Sbase.html" %}
 {% load static %}
 {% block title %}
-<title> Manage Product </title>
+<title> Order Status </title>
 {% endblock %}
 
 {% block content %}
@@ -18,21 +18,17 @@
         <table class="table table-striped" style="width: 350%;">
             <thead>
                 <tr>
-                    <th scope="col"></th>
                     <th scope="col">Order ID</th>
-                    <th scope="col">Customer Name</th>
-                    <th scope="col">Total Price</th>
+                    <th scope="col">Customer ID</th>
+                    <!-- <th scope="col">Total Price</th> -->
                 </tr>
             </thead>
             <tbody>
-                {% for product in products %}
+                {% for carts in carts %}
                 <tr>
-                    <td><input type="checkbox" name="products[]" value="{{ product.id }}"></td>
-                    <td><a href="/seller/edit-products/{{product.id}}">{{ product.name }}</a></td>
-                    <td><img src="{{ product.image.url }}" alt="{{ product.name }}" width="100" height="100"></td>
-                    <td>{{ product.category }}</td>
-                    <td>{{ product.price }}</td>
-                    <td>{{ product.status }}</td>
+                    <td><a href="{{carts.order}}">{{ carts.order }}</a></td>
+                    <td>{{ carts.customer_id }}</td>
+                    <!-- <td>{{ total }}</td> -->
                 </tr>
                 {% endfor %}
             </tbody>
