--- a/corgi/seller/templates/order_status_detail.html
+++ b/corgi/seller/templates/order_status_detail.html
@@ -21,11 +21,12 @@
         </div>
         <div class="card-body">
           <p>Order ID: {{ order }}</p>
-          <!-- <p>Customer: {{ user.name }}</p>
-          <p>Phone: {{ user.phone }}</p> -->
           <p>Number of Items: {{ amount }}</p>
           <p>Total Price: {{ total_price }} ฿</p>
+          <button type="button" class="btn btn-success" style = "width: 100px ;" >Accept</button>
+          <button type="button" class="btn btn-danger" style ="width: 100px ;">Decline</button>
         </div>
+
       </div>
     </div>
   </div>
